Fix(eos_designs): WAN Exclude interface IP address from direct internet-exit NAT ACL

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge1.cfg
@@ -15,11 +15,11 @@ flow tracking hardware
 service routing protocols model multi-agent
 !
 !
-ip nat profile IE-DIRECT-NAT
-   ip nat source dynamic access-list ALLOW-ALL overload
+ip nat profile NAT-IE-DIRECT
+   ip nat source dynamic access-list ACL-NAT-IE-DIRECT overload
 !
-ip nat profile IE-ZSCALER-NAT
-   ip nat source dynamic access-list ALLOW-ALL pool PORT-ONLY-POOL
+ip nat profile NAT-IE-ZSCALER
+   ip nat source dynamic access-list ACL-NAT-IE-ZSCALER pool PORT-ONLY-POOL
 !
 hostname cv-pathfinder-edge1
 !
@@ -342,7 +342,7 @@ interface Ethernet3
    no switchport
    ip address dhcp
    dhcp client accept default-route
-   ip nat service-profile IE-DIRECT-NAT
+   ip nat service-profile NAT-IE-DIRECT
 !
 interface Ethernet52
    description P2P_LINK_TO_SITE-HA-DISABLED-LEAF_Ethernet2
@@ -384,7 +384,7 @@ interface Tunnel100
    description Internet Exit ZSCALER-EXIT-POLICY-1 PRI
    mtu 1394
    ip address unnumbered Loopback0
-   ip nat service-profile IE-ZSCALER-NAT
+   ip nat service-profile NAT-IE-ZSCALER
    tunnel mode ipsec
    tunnel source interface Ethernet3
    tunnel destination 10.37.121.1
@@ -394,7 +394,7 @@ interface Tunnel101
    description Internet Exit ZSCALER-EXIT-POLICY-1 SEC
    mtu 1394
    ip address unnumbered Loopback0
-   ip nat service-profile IE-ZSCALER-NAT
+   ip nat service-profile NAT-IE-ZSCALER
    tunnel mode ipsec
    tunnel source interface Ethernet3
    tunnel destination 10.39.77.1
@@ -404,7 +404,7 @@ interface Tunnel102
    description Internet Exit ZSCALER-EXIT-POLICY-1 TER
    mtu 1394
    ip address unnumbered Loopback0
-   ip nat service-profile IE-ZSCALER-NAT
+   ip nat service-profile NAT-IE-ZSCALER
    tunnel mode ipsec
    tunnel source interface Ethernet3
    tunnel destination 10.50.9.1
@@ -414,7 +414,7 @@ interface Tunnel110
    description Internet Exit ZSCALER-EXIT-POLICY-2 PRI
    mtu 1394
    ip address unnumbered Loopback0
-   ip nat service-profile IE-ZSCALER-NAT
+   ip nat service-profile NAT-IE-ZSCALER
    tunnel mode ipsec
    tunnel source interface Ethernet3
    tunnel destination 10.37.121.1
@@ -424,7 +424,7 @@ interface Tunnel111
    description Internet Exit ZSCALER-EXIT-POLICY-2 SEC
    mtu 1394
    ip address unnumbered Loopback0
-   ip nat service-profile IE-ZSCALER-NAT
+   ip nat service-profile NAT-IE-ZSCALER
    tunnel mode ipsec
    tunnel source interface Ethernet3
    tunnel destination 10.39.77.1
@@ -434,7 +434,7 @@ interface Tunnel112
    description Internet Exit ZSCALER-EXIT-POLICY-2 TER
    mtu 1394
    ip address unnumbered Loopback0
-   ip nat service-profile IE-ZSCALER-NAT
+   ip nat service-profile NAT-IE-ZSCALER
    tunnel mode ipsec
    tunnel source interface Ethernet3
    tunnel destination 10.50.9.1
@@ -554,8 +554,13 @@ ip access-list TEST-IPV4-ACL-WITH-IP-FIELDS-IN_Ethernet1_49.3
    15 deny ip any host 172.24.49.3
    permit ip host 172.24.49.2 host 172.24.49.3
 !
-ip access-list ALLOW-ALL
-   10 permit ip any any
+ip access-list ACL-NAT-IE-DIRECT
+   10 deny ip any 5.0.0.0/24
+   20 permit ip any any
+!
+ip access-list ACL-NAT-IE-ZSCALER
+   10 permit ip any 10.0.0.0/24
+   20 deny ip any any
 !
 ip routing
 ip routing vrf ATTRACTED-VRF-FROM-UPLINK
