--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-transit1A.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-transit1A.cfg
@@ -17,8 +17,8 @@ service routing protocols model multi-agent
 ip as-path access-list ASPATH-WAN permit 65000 any
 !
 !
-ip nat profile IE-DIRECT-NAT
-   ip nat source dynamic access-list ALLOW-ALL overload
+ip nat profile NAT-IE-DIRECT
+   ip nat source dynamic access-list ACL-NAT-IE-DIRECT overload
 !
 hostname cv-pathfinder-transit1A
 !
@@ -310,7 +310,7 @@ interface Ethernet2.42
    no shutdown
    encapsulation dot1q vlan 666
    ip address 172.16.6.6/31
-   ip nat service-profile IE-DIRECT-NAT
+   ip nat service-profile NAT-IE-DIRECT
 !
 interface Ethernet52
    description P2P_LINK_TO_SITE-HA-ENABLED-LEAF1_Ethernet1
@@ -413,8 +413,9 @@ monitor connectivity
       local-interfaces SET-Ethernet2.42
       ip 123.12.3.4
 !
-ip access-list ALLOW-ALL
-   10 permit ip any any
+ip access-list ACL-NAT-IE-DIRECT
+   10 deny ip host 172.16.6.6 any
+   20 permit ip any any
 !
 ip routing
 ip routing vrf ATTRACTED-VRF-FROM-UPLINK
