--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge.cfg
@@ -15,11 +15,11 @@ flow tracking hardware
 service routing protocols model multi-agent
 !
 !
-ip nat profile IE-DIRECT-NAT
-   ip nat source dynamic access-list ALLOW-ALL overload
+ip nat profile NAT-IE-DIRECT
+   ip nat source dynamic access-list ACL-NAT-IE-DIRECT overload
 !
-ip nat profile IE-ZSCALER-NAT
-   ip nat source dynamic access-list ALLOW-ALL pool PORT-ONLY-POOL
+ip nat profile NAT-IE-ZSCALER
+   ip nat source dynamic access-list ACL-NAT-IE-ZSCALER pool PORT-ONLY-POOL
 !
 hostname cv-pathfinder-edge
 !
@@ -313,14 +313,14 @@ interface Ethernet2
    no shutdown
    no switchport
    ip address 172.15.5.5/31
-   ip nat service-profile IE-DIRECT-NAT
+   ip nat service-profile NAT-IE-DIRECT
 !
 interface Ethernet2/1
    description Colt_10555
    no shutdown
    no switchport
    ip address 172.15.5.6/31
-   ip nat service-profile IE-DIRECT-NAT
+   ip nat service-profile NAT-IE-DIRECT
 !
 interface Ethernet3
    description Comcast-5G_AF830
@@ -368,7 +368,7 @@ interface Tunnel100
    description Internet Exit ZSCALER-EXIT-POLICY-1 PRI
    mtu 1394
    ip address unnumbered Loopback0
-   ip nat service-profile IE-ZSCALER-NAT
+   ip nat service-profile NAT-IE-ZSCALER
    tunnel mode ipsec
    tunnel source interface Ethernet3
    tunnel destination 10.37.121.1
@@ -378,7 +378,7 @@ interface Tunnel101
    description Internet Exit ZSCALER-EXIT-POLICY-1 SEC
    mtu 1394
    ip address unnumbered Loopback0
-   ip nat service-profile IE-ZSCALER-NAT
+   ip nat service-profile NAT-IE-ZSCALER
    tunnel mode ipsec
    tunnel source interface Ethernet3
    tunnel destination 10.39.77.1
@@ -388,7 +388,7 @@ interface Tunnel102
    description Internet Exit ZSCALER-EXIT-POLICY-1 TER
    mtu 1394
    ip address unnumbered Loopback0
-   ip nat service-profile IE-ZSCALER-NAT
+   ip nat service-profile NAT-IE-ZSCALER
    tunnel mode ipsec
    tunnel source interface Ethernet3
    tunnel destination 10.50.9.1
@@ -489,7 +489,12 @@ monitor connectivity
       ip 10.50.9.1
       url http://gateway.zscalerbeta.net/vpntest
 !
-ip access-list ALLOW-ALL
+ip access-list ACL-NAT-IE-DIRECT
+   10 deny ip host 172.15.5.5 any
+   20 deny ip host 172.15.5.6 any
+   30 permit ip any any
+!
+ip access-list ACL-NAT-IE-ZSCALER
    10 permit ip any any
 !
 ip routing
