--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/host_vars/cv-pathfinder-edge1.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/host_vars/cv-pathfinder-edge1.yml
@@ -11,3 +11,41 @@
 wan_route_servers:
   - hostname: cv-pathfinder-pathfinder1
   - hostname: cv-pathfinder-pathfinder2
+
+# Testing overriding internet exit acls using custom rules with substitution
+ipv4_acls:
+  - name: TEST-IPV4-ACL-WITH-IP-FIELDS-IN
+    entries:
+      - sequence: 15
+        action: deny
+        protocol: ip
+        source: any
+        destination: interface_ip
+      - action: permit
+        protocol: ip
+        source: peer_ip
+        destination: interface_ip
+  - name: ACL-NAT-IE-ZSCALER
+    entries:
+      - sequence: 10
+        action: permit
+        protocol: ip
+        source: any
+        destination: 10.0.0.0/24
+      - sequence: 20
+        action: deny
+        protocol: ip
+        source: any
+        destination: any
+  - name: ACL-NAT-IE-DIRECT
+    entries:
+      - sequence: 10
+        action: deny
+        protocol: ip
+        source: any
+        destination: 5.0.0.0/24
+      - sequence: 20
+        action: permit
+        protocol: ip
+        source: any
+        destination: any
