--- a/ansible_collections/arista/avd/requirements.txt
+++ b/ansible_collections/arista/avd/requirements.txt
@@ -11,6 +11,5 @@ requests>=2.27.0
 PyYAML>=6.0.0
 deepmerge>=1.1.0
 cryptography>=38.0.4
-# No anta requirement until the eos_validate_state integration is out of preview.
-# anta>=1.0.0
+anta>=1.0.0
 aristaproto>=0.1.1
