Fix: Change the required arguments for eos_cli_config_gen

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/converge.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/converge.yml
@@ -5,6 +5,7 @@
   connection: local
   vars:
     tacacs_key_set_as_play_var: "071B245F5A"
+    read_structured_config_from_file: False
   tasks:
 
     - name: Generate device intended config and documentation
