--- a/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc1-wan1-catalog.yml
+++ b/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc1-wan1-catalog.yml
@@ -237,6 +237,24 @@ anta.tests.connectivity:
     result_overwrite:
       custom_field: 'Source: Loopback0 (IP: 10.255.2.1) - Destination: dc2-leaf3b.arista.com
         Loopback0 (IP: 10.255.128.18)'
+- VerifyReachability:
+    hosts:
+    - destination: 10.255.1.1
+      repeat: 1
+      source: 10.255.1.1
+      vrf: default
+    result_overwrite:
+      custom_field: 'Source: Dps1 (IP: 10.255.1.1/32) - Destination: dc1-wan1 Dps1
+        (IP: 10.255.1.1)'
+- VerifyReachability:
+    hosts:
+    - destination: 10.255.1.2
+      repeat: 1
+      source: 10.255.1.1
+      vrf: default
+    result_overwrite:
+      custom_field: 'Source: Dps1 (IP: 10.255.1.1/32) - Destination: dc1-wan2 Dps1
+        (IP: 10.255.1.2)'
 anta.tests.field_notices:
 - VerifyFieldNotice44Resolution: null
 - VerifyFieldNotice72Resolution: null
