--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/DC1-BL1A.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/DC1-BL1A.yml
@@ -450,6 +450,8 @@ ethernet_interfaces:
   mtu: 9000
   shutdown: false
   description: test
+  access_group_in: TEST-IPV4-ACL-WITH-IP-FIELDS-IN_Ethernet8
+  access_group_out: TEST-IPV4-ACL-WITH-IP-FIELDS-OUT_Ethernet8
   type: routed
   vrf: Tenant_A_L3_VRF_Zone
 - name: Ethernet9
@@ -458,6 +460,8 @@ ethernet_interfaces:
   mtu: 9000
   shutdown: false
   description: test
+  access_group_in: TEST-IPV4-ACL-WITH-IP-FIELDS-IN_Ethernet9
+  access_group_out: TEST-IPV4-ACL-WITH-IP-FIELDS-OUT_Ethernet9
   type: routed
   vrf: Tenant_A_L3_VRF_Zone
 - name: Ethernet10
@@ -466,6 +470,8 @@ ethernet_interfaces:
   mtu: 9000
   shutdown: false
   description: test-DC1-BL1A
+  access_group_in: TEST-IPV4-ACL-WITH-IP-FIELDS-IN_Ethernet10
+  access_group_out: TEST-IPV4-ACL-WITH-IP-FIELDS-OUT_Ethernet10
   type: routed
   vrf: Tenant_A_L3_VRF_Zone
 - name: Ethernet11
@@ -558,6 +564,49 @@ vlans:
 - id: 350
   name: Tenant_C_WAN_Zone_1
   tenant: Tenant_C
+ip_access_lists:
+- name: TEST-IPV4-ACL-WITH-IP-FIELDS-IN_Ethernet8
+  entries:
+  - sequence: 15
+    action: deny
+    protocol: ip
+    source: any
+    destination: 10.10.10.10
+- name: TEST-IPV4-ACL-WITH-IP-FIELDS-IN_Ethernet9
+  entries:
+  - sequence: 15
+    action: deny
+    protocol: ip
+    source: any
+    destination: 10.10.20.20
+- name: TEST-IPV4-ACL-WITH-IP-FIELDS-IN_Ethernet10
+  entries:
+  - sequence: 15
+    action: deny
+    protocol: ip
+    source: any
+    destination: 10.10.30.10
+- name: TEST-IPV4-ACL-WITH-IP-FIELDS-OUT_Ethernet8
+  entries:
+  - remark: Some remark will not require source and destination fields.
+  - action: permit
+    protocol: ip
+    source: 10.10.10.10
+    destination: any
+- name: TEST-IPV4-ACL-WITH-IP-FIELDS-OUT_Ethernet9
+  entries:
+  - remark: Some remark will not require source and destination fields.
+  - action: permit
+    protocol: ip
+    source: 10.10.20.20
+    destination: any
+- name: TEST-IPV4-ACL-WITH-IP-FIELDS-OUT_Ethernet10
+  entries:
+  - remark: Some remark will not require source and destination fields.
+  - action: permit
+    protocol: ip
+    source: 10.10.30.10
+    destination: any
 ip_igmp_snooping:
   globally_enabled: true
 ip_virtual_router_mac_address: 00:dc:00:00:00:0a
