--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/DC1_TENANTS_NETWORKS/Tenant_A.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/DC1_TENANTS_NETWORKS/Tenant_A.yml
@@ -242,10 +242,14 @@ tenant_a:
             mtu: 9000
             enabled: True
             description: "test"
+            ipv4_acl_in: TEST-IPV4-ACL-WITH-IP-FIELDS-IN
+            ipv4_acl_out: TEST-IPV4-ACL-WITH-IP-FIELDS-OUT
           - interfaces: [Ethernet10, Ethernet10]
             ip_addresses: [10.10.30.10/24, 10.10.40.20/24]
             nodes: [DC1-BL1A, DC1-BL1B]
             mtu: 9000
+            ipv4_acl_in: TEST-IPV4-ACL-WITH-IP-FIELDS-IN
+            ipv4_acl_out: TEST-IPV4-ACL-WITH-IP-FIELDS-OUT
             enabled: True
             descriptions: ["test-DC1-BL1A", "test-DC1-BL1B"]
           - interfaces: [Ethernet11, Ethernet11]
