--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/DC1-BL1B.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/DC1-BL1B.cfg
@@ -113,6 +113,8 @@ interface Ethernet8
    no switchport
    vrf Tenant_A_L3_VRF_Zone
    ip address 10.10.30.10/24
+   ip access-group TEST-IPV4-ACL-WITH-IP-FIELDS-IN_Ethernet8 in
+   ip access-group TEST-IPV4-ACL-WITH-IP-FIELDS-OUT_Ethernet8 out
 !
 interface Ethernet9
    description test
@@ -121,6 +123,8 @@ interface Ethernet9
    no switchport
    vrf Tenant_A_L3_VRF_Zone
    ip address 10.10.40.20/24
+   ip access-group TEST-IPV4-ACL-WITH-IP-FIELDS-IN_Ethernet9 in
+   ip access-group TEST-IPV4-ACL-WITH-IP-FIELDS-OUT_Ethernet9 out
 !
 interface Ethernet10
    description test-DC1-BL1B
@@ -129,6 +133,8 @@ interface Ethernet10
    no switchport
    vrf Tenant_A_L3_VRF_Zone
    ip address 10.10.40.20/24
+   ip access-group TEST-IPV4-ACL-WITH-IP-FIELDS-IN_Ethernet10 in
+   ip access-group TEST-IPV4-ACL-WITH-IP-FIELDS-OUT_Ethernet10 out
 !
 interface Ethernet11
    description DC1-BL1B descriptions preferred over single description
@@ -200,6 +206,27 @@ hardware tcam
    system profile vxlan-routing
 !
 ip virtual-router mac-address 00:dc:00:00:00:0a
+!
+ip access-list TEST-IPV4-ACL-WITH-IP-FIELDS-IN_Ethernet8
+   15 deny ip any host 10.10.10.10
+!
+ip access-list TEST-IPV4-ACL-WITH-IP-FIELDS-IN_Ethernet9
+   15 deny ip any host 10.10.20.20
+!
+ip access-list TEST-IPV4-ACL-WITH-IP-FIELDS-IN_Ethernet10
+   15 deny ip any host 10.10.30.10
+!
+ip access-list TEST-IPV4-ACL-WITH-IP-FIELDS-OUT_Ethernet8
+   remark Some remark will not require source and destination fields.
+   permit ip host 10.10.10.10 any
+!
+ip access-list TEST-IPV4-ACL-WITH-IP-FIELDS-OUT_Ethernet9
+   remark Some remark will not require source and destination fields.
+   permit ip host 10.10.20.20 any
+!
+ip access-list TEST-IPV4-ACL-WITH-IP-FIELDS-OUT_Ethernet10
+   remark Some remark will not require source and destination fields.
+   permit ip host 10.10.30.10 any
 !
 ip routing
 no ip routing vrf MGMT
