--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/DC1-LEAF2A.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/DC1-LEAF2A.cfg
@@ -171,10 +171,6 @@ interface Port-Channel11
    mtu 1600
    switchport
    switchport access vlan 110
-   evpn ethernet-segment
-      identifier 0000:0000:ca01:5ba3:6ffb
-      route-target import ca:01:5b:a3:6f:fb
-   lacp system-id ca01.5ba3.6ffb
    spanning-tree bpduguard enable
    spanning-tree bpdufilter enable
 !
@@ -201,6 +197,17 @@ interface Port-Channel26
    switchport phone vlan 211
    switchport phone trunk untagged
    switchport mode trunk phone
+!
+interface Port-Channel30
+   description DC1_L2LEAF6_Po1
+   no shutdown
+   switchport
+   switchport trunk allowed vlan 110-112,120-121,130-131,140-141,160-161,210-211,310-311,410-413,450-452
+   switchport mode trunk
+   evpn ethernet-segment
+      identifier 0000:0000:a8be:743c:0a1a
+      route-target import a8:be:74:3c:0a:1a
+   lacp system-id a8be.743c.0a1a
 !
 interface Port-Channel141
    description DC1_L2LEAF5_Po1
@@ -331,6 +338,11 @@ interface Ethernet26
    description PHONE03_port_channel_Eth0
    no shutdown
    channel-group 26 mode active
+!
+interface Ethernet30
+   description DC1.L2LEAF6A_Ethernet1
+   no shutdown
+   channel-group 30 mode active
 !
 interface Ethernet49/1
    description P2P_LINK_TO_DC1-SPINE1_Ethernet3/1
