--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/DC1-LEAF2B.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/DC1-LEAF2B.yml
@@ -491,16 +491,6 @@ ethernet_interfaces:
   channel_group:
     id: 9
     mode: active
-- name: Ethernet12
-  peer: server01_MTU_ADAPTOR_MLAG
-  peer_interface: Eth7
-  peer_type: server
-  description: server01_MTU_ADAPTOR_MLAG_Eth7
-  shutdown: false
-  type: port-channel-member
-  channel_group:
-    id: 12
-    mode: active
 - name: Ethernet13
   peer: DC1-L2LEAF4A
   peer_interface: Ethernet2
@@ -530,6 +520,16 @@ ethernet_interfaces:
   type: port-channel-member
   channel_group:
     id: 141
+    mode: active
+- name: Ethernet31
+  peer: DC1.L2LEAF6B
+  peer_interface: Ethernet1
+  peer_type: l2leaf
+  description: DC1.L2LEAF6B_Ethernet1
+  shutdown: false
+  type: port-channel-member
+  channel_group:
+    id: 30
     mode: active
 - name: Ethernet49/1
   peer: DC1-SPINE1
@@ -641,6 +641,16 @@ ethernet_interfaces:
   channel_group:
     id: 11
     mode: active
+- name: Ethernet12
+  peer: server01_MTU_ADAPTOR_MLAG
+  peer_interface: Eth7
+  peer_type: server
+  description: server01_MTU_ADAPTOR_MLAG_Eth7
+  shutdown: false
+  type: port-channel-member
+  channel_group:
+    id: 12
+    mode: active
 - name: Ethernet20
   peer: FIREWALL01
   peer_interface: E1
@@ -694,19 +704,6 @@ port_channel_interfaces:
     identifier: 0000:0000:0606:0707:0808
     route_target: 06:06:07:07:08:08
   lacp_id: 0606.0707.0808
-- name: Port-Channel11
-  description: server01_MTU_PROFILE_MLAG_PortChanne1
-  type: switched
-  shutdown: false
-  mode: access
-  vlans: '110'
-  evpn_ethernet_segment:
-    identifier: 0000:0000:ca01:5ba3:6ffb
-    route_target: ca:01:5b:a3:6f:fb
-  lacp_id: ca01.5ba3.6ffb
-  mtu: 1600
-  spanning_tree_bpdufilter: enabled
-  spanning_tree_bpduguard: enabled
 - name: Port-Channel1013
   description: DC1-L2LEAF4A_Po1001
   type: switched
@@ -727,6 +724,16 @@ port_channel_interfaces:
     identifier: 0000:0000:fa91:ce62:ce95
     route_target: fa:91:ce:62:ce:95
   lacp_id: fa91.ce62.ce95
+- name: Port-Channel30
+  description: DC1_L2LEAF6_Po1
+  type: switched
+  shutdown: false
+  mode: trunk
+  vlans: 110-112,120-121,130-131,140-141,160-161,210-211,310-311,410-413,450-452
+  evpn_ethernet_segment:
+    identifier: 0000:0000:a8be:743c:0a1a
+    route_target: a8:be:74:3c:0a:1a
+  lacp_id: a8be.743c.0a1a
 - name: Port-Channel10
   description: server01_MLAG_PortChanne1
   type: switched
@@ -735,6 +742,15 @@ port_channel_interfaces:
   vlans: 210-211
   spanning_tree_bpdufilter: disabled
   spanning_tree_bpduguard: disabled
+- name: Port-Channel11
+  description: server01_MTU_PROFILE_MLAG_PortChanne1
+  type: switched
+  shutdown: false
+  mtu: 1600
+  mode: access
+  vlans: '110'
+  spanning_tree_bpdufilter: enabled
+  spanning_tree_bpduguard: enabled
 - name: Port-Channel12
   description: server01_MTU_ADAPTOR_MLAG_PortChanne1
   type: switched
